--- a/src/style.css
+++ b/src/style.css
@@ -73,16 +73,11 @@ li:first-letter {
   cursor: default;
 }
 
-.github,
-.netlify {
-  color: #df526d;
-}
-
 .five-day-forecast {
   margin-top: 20px;
   text-align: center;
   font-size: 13px;
-  color: #ff5722;
+  color: #fd5f00;
 }
 
 .weekdays {
