--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-  color: #df526d;
+  color: #f8b500;
   font-size: 24px;
   font-weight: 100;
   line-height: 29px;
@@ -29,15 +29,15 @@ li:first-letter {
 }
 
 .weather-app-wrap {
-  background-image: url(https://xoxobella.com/wp-content/uploads/2021/06/sunrise_sunset_captions_puns_quotes_instagram-7.jpg);
-  background-size: 600px;
+  background-image: url(https://cdn2.outdoorphotographer.com/2021/06/sunset-photographs-gary-hart-lake-wanaka.jpg);
+  background-size: 650px;
   background-repeat: no-repeat;
   max-width: 600px;
   margin: 30px auto;
 }
 
 .weather-app {
-  padding: 55px;
+  padding: 30px;
 }
 
 .preview {
@@ -77,10 +77,10 @@ li:first-letter {
   margin-top: 20px;
   text-align: center;
   font-size: 13px;
-  color: #fd5f00;
+  color: #2f5137;
 }
 
 .weekdays {
-  color: #8a1253;
+  color: #f8b500;
   font-size: 15px;
 }
